tests/errors/type_receiver_method_call.ptt
use std/list

spark {
  xs is List of int .reserve(64)
  yell(xs.len())
}
